# irpf-copilot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TESTING.md  main.py  project-brief.md  pyproject.toml  run_tests.bat  run_tests.py  test_basic.py  test_dbk_context.py
.github/: copilot-instructions.md
agent/: __init__.py  agent.py
agent/tools/: __init__.py  dbk_tool.py  llm_pdf_tool.py  mapeamentoTxt.xml  ocr_tool.py  search_tool.py
agent/utils/: __init__.py  checksum.py  common_utils.py  dbk_parser.py  file_utils.py  llm_managers.py  markdown_utils.py  pdf_processor.py  prompt_builders.py  xml_processors.py
llm-aux-docs/: algoritimo_checksum.md  tipos_campos_dbk.md
llm-aux-docs/IRPF-master/Docs/Gerada/2020/: 22222222303-IRPF-A-2020-2019-ORIGI.DEC
llm-aux-docs/irpf-2025/modulos/irpf.jar.src/: AC.xml  AL.xml  AM.xml  AP.xml  BA.xml  CE.xml  DF.xml  DIRPF2025.jasper  DIRPF2025.xsl  DIRPFComponente.groovy  DIRPFIf.groovy  Default-flat.theme  Default.theme  ES.xml  FolhaDeRosto.jasper  GO.xml  IRPF-Licenses.txt  LEIA-ME.txt  LayoutDadosDIRPF2025.xml  MA.xml  MG.xml  MS.xml  MT.xml  Mensagens.properties  PA.xml  PB.xml  PE.xml  PI.xml  PR.xml  RJ.xml  RN.xml  RO.xml  RR.xml  RS.xml  SC.xml  SE.xml  SP.xml  TO.xml  altcoins.xml  aplicacao.properties  (+257 more)
llm-aux-docs/irpf-2025/modulos/irpf.jar.src/2025/: DIRPF2025.groovy
llm-aux-docs/irpf-2025/modulos/irpf.jar.src/dirpf2025scriptlets/: RelDeclaracaoContribuinteScriptlet.java  RelDeclaracaoRendimentosTributaveisPJDependenteScriptlet.java
llm-aux-docs/irpf-2025/modulos/irpf.jar.src/serpro/ppgd/app/: AjudaIf.java  ConstantesIf.java  ConstantesImpressaoIf.java  ConstantesMensagens.java  IRPFPGD.java  MensagensIf.java  PGDAb.java  PlataformaIRPFPGD.java
llm-aux-docs/irpf-2025/modulos/irpf_negocio-declaracao.jar.src/serpro/ppgd/irpf/: ColecaoIdDeclaracao.java  ColecaoIdDeclaracaoTransmitida.java  DeclaracaoIRPF.java  FontePagadora.java  IRPFFacade.java  IdentificadorDeclaracao.java  IdentificadorDeclaracaoTransmitida.java  ImpostoDevidoPorDeclarante.java  ItemLimiteDeducaoIncentivo.java  ObservadorAproximaAno.java  ObservadorEspacosDuplicados.java  ObservadorTipoDeclaracao.java  PreenchedorFichasImpressao.java  RepositorioXMLIRPF.java  ValidadorCPFDiferenteTitular.java  ValidadorCPFIRPF.java  ValidadorDataIrpf.java  ValidadorMaximoDigitosInteiros.java  ValidadorNaoNegativo.java  ValidadorNaoNuloIRPF.java  ValidadorNomeIRPF.java  ValidadoresDominioAb.java  ValorBigDecimal.java  ValorPositivo.java
llm-aux-docs/irpf-2025/modulos/irpf_negocio-declaracao.jar.src/serpro/ppgd/irpf/alimentandos/: Alimentando.java  Alimentandos.java  DecisaoJudicial.java  EscrituracaoPublica.java  ObservadorRemoverPensaoRRA.java  ValidadorAlimentandoIgualDependente.java  ValidadorAlimentandoRepetido.java  ValidadorCPFMaior12.java  ValidadorCondicaoResidencia.java  ValidadorNomeVazio.java
llm-aux-docs/irpf-2025/modulos/irpf_negocio-declaracao.jar.src/serpro/ppgd/irpf/atividaderural/: AtividadeRural.java  BemAR.java  BensAR.java  CalculosBensAR.java  DividaAR.java  ImovelAR.java  ItemMovimentacaoRebanho.java  MovimentacaoRebanho.java  ParticipanteImovelAR.java  ParticipantesImovelAR.java  ValidadorCIB.java  ValidadorMovimentacaoRebanho.java
llm-aux-docs/irpf-2025/modulos/irpf_negocio-declaracao.jar.src/serpro/ppgd/irpf/bens/: Bem.java  Bens.java  (+15 more)
llm-aux-docs/irpf-2025/xml/: aliquotas.xml  bancos.xml  bancos_bens.xml  datasIrpf.xml  dependencias.xml  eca.xml  eidoso.xml  links.xml  mensagens.xml  municipiosCalamidade.xml  naturezasOcupacao.xml  ocupacoesPrincipal.xml  paises.xml  tipoBens.xml  tipoDividas.xml  tipoPagamentos.xml  tipoRendIsento.xml  tipoRendTributExclusiva.xml  tipoRendimentos.xml
tests/: __init__.py  conftest.py  test_agent.py  test_basic.py  test_dbk_format_record_line.py  test_dbk_integration_complete.py  test_dbk_parsing.py  test_dbk_tool.py  test_main.py
(+462 files in other folders)
